[gd_scene load_steps=13 format=3 uid="uid://w8l26w77t4dq"]

[ext_resource type="Script" uid="uid://xtlutb2scc3k" path="res://Minigames/General/Scripts/minigame_template_singlescreen.gd" id="1_2lo1c"]
[ext_resource type="Texture2D" uid="uid://mymgsnnh3o0d" path="res://MiscAssets/Players/Icons/Penguin.png" id="2_h4ofi"]
[ext_resource type="PackedScene" uid="uid://dp1kw05gbpte7" path="res://Minigames/General/Scenes/panels.tscn" id="2_n8c13"]
[ext_resource type="FontFile" uid="uid://4h8up6o8g8q8" path="res://Minigames/FoodOrder/Assets/potFont.tres" id="3_n8c13"]
[ext_resource type="PackedScene" uid="uid://defw1u3hso2en" path="res://Minigames/General/Scenes/cursor.tscn" id="4_y5nrw"]

[sub_resource type="Animation" id="Animation_lfkhu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Start:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/End/Black:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_34sat"]
resource_name = "start"
length = 4.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Start:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 2.5, 3.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/End/Black:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j3hxy"]
_data = {
&"RESET": SubResource("Animation_lfkhu"),
&"start": SubResource("Animation_34sat")
}

[sub_resource type="Animation" id="Animation_xrv4f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/End/Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/End/Panels/B:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1080)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D/End/Panels/R:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(480, 1080)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D/End/Panels/G:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, -1080)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D/End/Panels/Y:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1440, 1080)]
}

[sub_resource type="Animation" id="Animation_n3vx5"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/End/Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_b4hru"]
resource_name = "slide"
length = 1.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/End/Panels/B:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -1080), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D/End/Panels/R:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(480, 1080), Vector2(480, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D/End/Panels/G:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(960, -1080), Vector2(960, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D/End/Panels/Y:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1440, 1080), Vector2(1440, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n3vx5"]
_data = {
&"RESET": SubResource("Animation_xrv4f"),
&"fade_in": SubResource("Animation_n3vx5"),
&"slide": SubResource("Animation_b4hru")
}

[node name="Template Single Screen" type="Node2D"]
script = ExtResource("1_2lo1c")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="AP" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_j3hxy")
}

[node name="GameEnd" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_n3vx5")
}
autoplay = "fade_in"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="End" type="CanvasLayer" parent="Camera2D"]

[node name="Panels" parent="Camera2D/End" instance=ExtResource("2_n8c13")]

[node name="Black" type="ColorRect" parent="Camera2D/End"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="PlayerScores" type="Node2D" parent="."]

[node name="1" type="ColorRect" parent="PlayerScores"]
offset_left = 32.0
offset_top = 654.0
offset_right = 251.0
offset_bottom = 786.0
color = Color(0, 0.262745, 1, 1)

[node name="Icon1" type="Sprite2D" parent="PlayerScores/1"]
position = Vector2(66, 66)
scale = Vector2(0.33, 0.33)
texture = ExtResource("2_h4ofi")

[node name="Score1" type="Label" parent="PlayerScores/1"]
layout_mode = 0
offset_left = -164.0
offset_top = -197.0
offset_right = 506.0
offset_bottom = 324.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_n8c13")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="2" type="ColorRect" parent="PlayerScores"]
offset_left = 286.0
offset_top = 654.0
offset_right = 505.0
offset_bottom = 786.0
color = Color(0.529412, 0.0862745, 0, 1)

[node name="Icon2" type="Sprite2D" parent="PlayerScores/2"]
position = Vector2(66, 66)
scale = Vector2(0.33, 0.33)
texture = ExtResource("2_h4ofi")

[node name="Score2" type="Label" parent="PlayerScores/2"]
layout_mode = 0
offset_left = -163.0
offset_top = -197.0
offset_right = 507.0
offset_bottom = 324.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_n8c13")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="3" type="ColorRect" parent="PlayerScores"]
offset_left = 32.0
offset_top = 814.0
offset_right = 251.0
offset_bottom = 946.0
color = Color(0, 0.419608, 0.0745098, 1)

[node name="Icon3" type="Sprite2D" parent="PlayerScores/3"]
position = Vector2(66, 66)
scale = Vector2(0.33, 0.33)
texture = ExtResource("2_h4ofi")

[node name="Score3" type="Label" parent="PlayerScores/3"]
layout_mode = 0
offset_left = -164.0
offset_top = -196.0
offset_right = 506.0
offset_bottom = 325.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_n8c13")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="4" type="ColorRect" parent="PlayerScores"]
offset_left = 286.0
offset_top = 814.0
offset_right = 505.0
offset_bottom = 946.0
color = Color(0.862745, 0.694118, 0.054902, 1)

[node name="Icon4" type="Sprite2D" parent="PlayerScores/4"]
position = Vector2(66, 66)
scale = Vector2(0.33, 0.33)
texture = ExtResource("2_h4ofi")

[node name="Score4" type="Label" parent="PlayerScores/4"]
layout_mode = 0
offset_left = -163.0
offset_top = -196.0
offset_right = 507.0
offset_bottom = 325.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_n8c13")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cursors" type="Node2D" parent="."]

[node name="Cursor1" parent="Cursors" instance=ExtResource("4_y5nrw")]
position = Vector2(743, 770)

[node name="Cursor2" parent="Cursors" instance=ExtResource("4_y5nrw")]
position = Vector2(893, 770)

[node name="Cursor3" parent="Cursors" instance=ExtResource("4_y5nrw")]
position = Vector2(1043, 770)

[node name="Cursor4" parent="Cursors" instance=ExtResource("4_y5nrw")]
position = Vector2(1193, 770)

[node name="Start" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_top = 119.0
offset_right = 1920.0
offset_bottom = 640.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = ExtResource("3_n8c13")
theme_override_font_sizes/font_size = 250
text = "Start!"
horizontal_alignment = 1
vertical_alignment = 1
